# writer

./: .gitignore  AGENTS.md  LICENSE  pyproject.toml
docs/: CONVENTIONS.md  ERROR_CODES.md  HOT_FIELDS.md  INVARIANTS.md  PROJECT_PROGRESS.md  STATE_MACHINES.md
docs/adr/: 001-sqlite-over-postgres.md  002-ulid-as-primary-key.md  003-vector-store-choice.md  004-thin-repo-over-orm.md  005-light-runner-over-langgraph.md  006-instructor-over-pydanticai.md  007-draft-vs-canonical.md  008-core-atomic-audit-eventual.md
docs/cards/: F01-projects.md  F02-configs.md  F03-chapters.md  F04-memory.md  F05-graph.md  F06-state-assertions.md  F07-timeline.md  F08-traversal.md  F09-swarm-runner.md  F10-recycle-undo.md  F11-audit.md  F12-bootstrap.md  F13-chat.md  F14-context-budgeter.md  F15-outbox.md
docs/spec/: 00-meta.md  01-prd.md  02-architecture.md  03-workflows.md  04-runtime.md  05-api.md  06-schemas.md  07-data-model.md  08-milestones.md  09-review-notes-a.md  10-review-notes-b.md  11-docs-frontend.md
src/app/: __init__.py  db.py  main.py  schemas.py  ulid.py
tests/: test_chapters_api.py  test_projects_api.py  test_swarm_runner_api.py
